[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "lazyhtml"
version = "0.1.0"

[[test]]
harness = false
name = "test"

[dependencies.lazyhtml-sys]
path = "lazyhtml-sys"
version = "0.1.0"

[dev-dependencies]
glob = "0.2.11"
html5ever = "0.18.0"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"

[dev-dependencies.rustc-test]
features = ["capture"]
version = "0.2.0"

[workspace]
