[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "lazyhtml"
version = "0.1.0"

[[bench]]
harness = false
name = "bench"

[[test]]
harness = false
name = "test"

[dependencies.lazyhtml-sys]
path = "lazyhtml-sys"
version = "0.1.0"

[dev-dependencies]
getopts = "0.2.15"
glob = "0.2.11"
html5ever = "0.21.0"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"

[dev-dependencies.rustc-test]
features = ["capture"]
version = "0.2.0"

[workspace]
