[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "lazyhtml"
version = "0.1.0"
publish = false
autotests = false

[[bench]]
harness = false
name = "bench"

[[test]]
harness = false
name = "test"

[dependencies.lazyhtml-sys]
path = "lazyhtml-sys"
version = "0.1.0"

[dev-dependencies]
getopts = "0.2.15"
glob = "0.3.0"
html5ever = "0.23.0"
serde = { version = "1.0.19", features = ["derive"] }
serde_json = "1.0.5"
rustc-test = "0.3.0"

[workspace]
